darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_property_union_basic.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "foo": {
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "number"
        }
      ]
    }
  },
  "type": "object"
}
