darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_property_union_hoists_matching_default.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "flag": {
      "anyOf": [
        {
          "type": "boolean"
        },
        {
          "anyOf": [
            {
              "type": "boolean"
            },
            {
              "enum": [
                "true",
                "false",
                "True",
                "False",
                "TRUE",
                "FALSE"
              ]
            }
          ]
        }
      ],
      "default": true
    }
  },
  "type": "object"
}
