darkmatter/lib/tests/snapshots/schemas_convert_snapshots__snapshot_property_union_hoists_required.snap
---
source: darkmatter/lib/tests/schemas_convert_snapshots.rs
expression: convert_yaml(yaml)
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": true,
  "properties": {
    "title": {
      "anyOf": [
        {
          "pattern": "\\S",
          "type": "string"
        },
        {
          "type": "number"
        }
      ]
    }
  },
  "required": [
    "title"
  ],
  "type": "object"
}
